--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,16 @@
         
     </dependencies>
     
-    
+    <distributionManagement>
+        <repository>
+            <id>deployment</id>
+            <name>Releases Repository</name>
+            <url>http://192.168.1.24:8081/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>deplyoment</id>
+            <name>Snapshots Repository</name>
+            <url>http://192.168.1.24:8081/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
